<resources>
    <string name="app_name">高新微政务</string>
    <string name="act_login_edt_account">请输入用户名</string>
    <string name="act_login_edt_password">请输入密码</string>
    <string name="act_login_tv">记住密码，以后自动登录</string>
    <string name="act_login_bt">登录</string>
    <string name="frg_ga_tv_title">高新微政务</string>
    <string name="frg_ga_tv_notice">通知</string>
    <string name="frg_ga_tv_document">公文</string>
    <string name="frg_ga_tv_magazine">内部刊物</string>
    <string name="frg_ga_tv_public_information">公共信息</string>
    <string name="frg_ga_tv_department_information">部门信息</string>
    <string name="act_notice_list_tv_title">通知列表</string>
    <string name="act_notice_list_edt_search">搜索</string>
    <string name="act_notice_tv_title">通知</string>
    <string name="act_notice_tv_label_sender">发送人:</string>
    <string name="act_notice_tv_label_send_time">发送时间:</string>
    <string name="act_notice_tv_label_department">通知到部门:</string>
    <string name="act_notice_tv_label_receiver">通知到人:</string>
    <string name="act_notice_tv_label_message">短信提醒:</string>
    <string name="act_notice_tv_guide_attachment">详情请见附件。</string>
    <string name="act_notice_tv_download_attachment">附件（点击下载）：</string>
    <string name="act_notice_tv_label_receipt">回执:</string>
    <string name="act_publish_notice_tv_title">发布通知</string>
    <string name="act_publish_notice_bt_send">发送</string>
    <string name="act_publish_notice_tv_department">通知到部门:</string>
    <string name="act_publish_notice_tv_receiver">通知到人:</string>
    <string name="act_publish_notice_tv_sender">发送人:</string>
    <string name="act_publish_notice_tv_message">短信提醒:</string>
    <string name="act_publish_notice_tv_receipt">回执:</string>
    <string name="act_publish_notice_tv_theme">主题:</string>
    <string name="act_publish_notice_tv_text">正文:</string>
    <string name="act_publish_notice_tv_add_attachment">添加附件</string>
    <string name="act_document_list_tv_title">公文列表</string>
    <string name="act_document_tv_title">公文</string>
    <string name="act_document_tv_label_sender">主送:</string>
    <string name="act_document_tv_label_CC">抄送:</string>
    <string name="act_document_tv_label_sign_date">签发日期:</string>
    <string name="act_document_tv_label_print_date">印发日期:</string>
    <string name="act_document_tv_label_title">标题</string>
    <string name="act_document_tv_label_dense">密级</string>
    <string name="act_document_tv_label_urgency">缓急</string>
    <string name="act_document_tv_label_text">公文正文</string>
    <string name="act_document_tv_label_attachment">附件</string>
    <string name="act_document_tv_label_remarks">公文备注</string>
    <string name="act_document_tv_label_explain">分发说明</string>
    <string name="act_document_tv_download">点击下载</string>
    <string name="act_magazine_list_tv_title">内部刊物</string>
    <string name="act_magazine_toolbar_tv_title">内部刊物</string>
    <string name="act_public_information_list_tv_title">公共信息</string>
    <string name="act_department_information_tv_attachment">附件（点击下载）:</string>
    <string name="act_department_information_tv_attachments">附件:</string>
    <string name="act_department_information_list_tv_title">部门信息</string>
    <string name="frg_me_tv_title">高新微政务</string>
    <string name="frg_me_tv_label_position">职位:</string>
    <string name="frg_me_tv_about">关于</string>
    <string name="frg_me_tv_setting">设置</string>
    <string name="frg_me_tv_exit_log">退出登录</string>
    <string name="act_setting_toolbar_tv_title">设置</string>
    <string name="act_setting_tv_font_size">字体大小</string>
    <string name="act_setting_tv_new_remind">消息提醒</string>
    <string name="act_setting_tv_remove_binding">解除绑定</string>
    <string name="act_setting_bt_new_version">检查新版本</string>
    <string name="frg_mail_list_tv_title">高新微政务</string>
    <string name="read_detail">阅读详情</string>
    <string name="frg_mail_list_bt_import">导入</string>
    <string name="act_contacts_information_tv_title">联系人信息</string>
    <string name="act_contacts_information_tv_label_department">部门:</string>
    <string name="act_contacts_information_tv_label_position">职位:</string>
    <string name="act_contacts_information_tv_label_mobile_phone">手机</string>
    <string name="act_contacts_information_tv_label_phone">办公室电话</string>
    <string name="act_contacts_information_tv_label_email">邮箱</string>
    <string name="act_contacts_information_tv_label_remarks">备注</string>
    <string name="act_contacts_information_bt_import">导入本地通讯录</string>
    <string name="act_contacts_information_bt_instant_messaging">即时通讯</string>
    <string name="act_find_tv_title">高新微政务</string>
    <string name="frg_find_tv_government_tool">政务工具</string>
    <string name="frg_find_tv_common_tool">常用工具</string>
    <string name="act_about_tv_title">关于</string>
    <string name="act_import_contacts_bt_cancel">取消</string>
    <string name="act_import_contacts_bt_all">全选</string>
    <string name="act_import_contacts_bt_import">导入到手机通讯录</string>
    <string name="list_tv">全标为已读</string>
    <string name="tool_dialog_done_tv">已成功导入到手机通讯录</string>
    <string name="listview_footbar_tv">正在加载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="act_remarks_notice_tv_title">备注</string>
    <string name="act_remarks_notice_ibt_done">完成</string>
    <string name="act_memorandum_tv_title">备忘录</string>
    <string name="act_tag_save">保存</string>
    <string name="act_tag_tv_title">标题</string>
    <string name="act_tag_tv_ring">提醒</string>
    <string name="act_tag_edt_text">正文</string>
    <string name="act_tag_tv_time_select">选择时间</string>
    <string name="act_tag_tv_time_show">8时 0分</string>
    <string name="act_memorandum_tv_delete">删除</string>
    <string name="act_memorandum_tv_cancel">取消</string>


    <string name="act_public_information_infopeople">发送人员:</string>
    <string name="act_public_information_infoDate">发送日期:</string>
    <string name="act_public_information_content">内容:</string>
    <string name="act_public_information_dense">密级:</string>
    <string name="act_public_information_video">视频下载地址(点击下载)</string>
    <string name="act_public_information_picture">图片下载地址(点击下载)</string>
    <string name="act_department_information_depart">部门</string>
    <string name="act_publish_notice_choice_list_bt_done">完成</string>
    <string name="frg_me_tv_feedback">反馈</string>
    <string name="act_publish_notice_choice_department_tv_title">通知到部门</string>
    <string name="act_publish_notice_choice_receiver_tv_title">通知到人</string>
    <string name="act_feedback_send">发送</string>
    <string name="act_feedback_tip">请在下面写下你需要反馈的信息：</string>
    <string name="act_notice_content_label">正文：</string>
    <string name="act_setting_tv_clear">清空缓存</string>
    <string name="act_published_notice_list_tv_title">已发布通知</string>
</resources>
