<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/act_remarks_notice_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/act_remarks_notice_ibt_return"
                style="@style/act_header_ibt_return"
                android:contentDescription="@string/app_name"
                android:background="@color/colorImageButtonBackgroundTransparent"/>

            <TextView
                style="@style/act_header_tv_title"
                android:text="@string/act_remarks_notice_tv_title" />

            <Button
                android:id="@+id/act_remarks_notice_bt_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                style="@style/act_header_ibt_toolbar_right"
                android:text="@string/act_remarks_notice_ibt_done"
                android:textSize="17sp"
                android:textColor="@color/colorButtonText"
                android:background="@color/colorImageButtonBackgroundTransparent"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@color/colorLayoutBackground"
        android:orientation="vertical">

        <EditText
            android:id="@+id/act_remarks_notice_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:maxLines="20"
            android:background="@null"/>

    </RelativeLayout>
</LinearLayout>
