<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/act_notice_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/act_notice_ibt_return"
                style="@style/act_header_ibt_return"
                android:contentDescription="@string/app_name"
                android:background="@color/colorImageButtonBackgroundTransparent"/>

            <TextView
                style="@style/act_header_tv_title"
                android:text="@string/act_notice_tv_title"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/act_notice_ibt_menu"
                style="@style/act_header_ibt_toolbar_right"
                android:src="@drawable/ic_notice_wire_point_36dp"
                android:background="@color/colorImageButtonBackgroundTransparent"
                android:contentDescription="@string/app_name"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/act_notice_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_toolbar"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorTextViewTextBlack"/>
    
    <TextView
        android:id="@+id/act_notice_tv_label_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_title"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/act_notice_tv_label_sender"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText" />

    <TextView
        android:id="@+id/act_notice_tv_label_send_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/act_notice_tv_label_sender"
        android:text="@string/act_notice_tv_label_send_time"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText" />

    <TextView
        android:id="@+id/act_notice_tv_label_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_label_send_time"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="@string/act_notice_tv_label_department"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText" />

    <TextView
        android:id="@+id/act_notice_tv_label_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_label_department"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="@string/act_notice_tv_label_receiver"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText" />

    <TextView
        android:id="@+id/act_notice_tv_label_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_label_receiver"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="@string/act_notice_tv_label_message"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText" />

    <TextView
        android:id="@+id/act_notice_tv_label_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/act_notice_tv_label_message"
        android:layout_toStartOf="@+id/act_notice_tv_receipt"
        android:layout_toLeftOf="@+id/act_notice_tv_receipt"
        android:text="@string/act_notice_tv_label_receipt"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorActivityGrayText"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/act_notice_tv_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/act_notice_tv_label_sender"
        android:layout_toEndOf="@+id/act_notice_tv_label_sender"
        android:layout_toRightOf="@+id/act_notice_tv_label_sender"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <TextView
        android:id="@+id/act_notice_tv_send_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/act_notice_tv_label_send_time"
        android:layout_toEndOf="@+id/act_notice_tv_label_send_time"
        android:layout_toRightOf="@+id/act_notice_tv_label_send_time"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <TextView
        android:id="@+id/act_notice_tv_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/act_notice_tv_label_department"
        android:layout_toEndOf="@+id/act_notice_tv_label_department"
        android:layout_toRightOf="@+id/act_notice_tv_label_department"
        android:singleLine="true"
        android:ellipsize="end"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <TextView
        android:id="@+id/act_notice_tv_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/act_notice_tv_label_receiver"
        android:layout_toEndOf="@id/act_notice_tv_label_receiver"
        android:layout_toRightOf="@+id/act_notice_tv_label_receiver"
        android:ellipsize="end"
        android:singleLine="true"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <TextView
        android:id="@+id/act_notice_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/act_notice_tv_label_message"
        android:layout_toEndOf="@+id/act_notice_tv_label_message"
        android:layout_toRightOf="@+id/act_notice_tv_label_message"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <TextView
        android:id="@+id/act_notice_tv_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/act_notice_tv_label_message"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <LinearLayout
        android:id="@+id/act_notice_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/act_notice_tv_label_message"
        android:background="@color/colorActivityBackground"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/act_notice_content_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:textColor="@color/colorTextViewTextBlack"
        style="@style/fontSize_standard_15sp"
        android:layout_below="@+id/act_notice_divider"
        android:text="@string/act_notice_content_label"/>
    <WebView
        android:id="@+id/act_notice_tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        style="@style/fontSize_standard_15sp"
        android:layout_below="@+id/act_notice_content_label" />

    <!--<TextView
        android:id="@+id/act_notice_tv_guide_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:text="@string/act_notice_tv_guide_attachment"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>-->

    <ImageButton
        android:id="@+id/act_notice_ibt_download_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:src="@drawable/ic_notice_downloading_36dp"
        android:background="@color/colorImageButtonBackgroundTransparent"/>

    <TextView
        android:id="@+id/act_notice_tv_download_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_content"
        android:layout_alignBaseline="@+id/act_notice_ibt_download_attachment"
        android:layout_marginTop="11dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_toEndOf="@+id/act_notice_ibt_download_attachment"
        android:layout_toRightOf="@+id/act_notice_ibt_download_attachment"
        android:text="@string/act_notice_tv_download_attachment"
        style="@style/fontSize_standard_15sp"
        android:textColor="@color/colorTextViewTextBlack"/>

    <ListView
        android:id="@+id/attachmentListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_notice_tv_download_attachment">
    </ListView>

</RelativeLayout>
    </ScrollView>

</RelativeLayout>
